--- a/scenes/colony/TODO.txt
+++ b/scenes/colony/TODO.txt
@@ -2,10 +2,10 @@ colony game prototype requirements
 
 jobs:
 	list of jobs to edit them (or just click in world)
-	edit jobs menu (after placing a job)
-	add workers to job
-	amount of workers should reduce required time
-	time should be different from resources (or make resources float)
+	<done>edit jobs menu (after placing a job)</done>
+	<dpone>add workers to job</dpone>
+	<done>amount of workers should reduce required time</done>
+	<done>time should be different from resources (or make resources float)</done>
 	progressing to next day:
 		leave uncompletable jobs uncompleted for now
 
